--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,46 @@ h2 ~ p {
 /* HERO STYLES */
 .full-hero {
   background-color: #c7dbfc;
-  height: 50vh;
+  box-sizing: border-box;
+  height: 100vh;
+  padding-top: 10vh;
+  background-size: cover;
+}
+.full-hero:after {
+    border: 10px solid;
+    border-color: #fff transparent transparent;
+    bottom: 2vh;
+    content: "";
+    height: 0;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, 0);
+    width: 0;
+}
+.hero-home {
+    background-image: url(/images/shark.jpg);
+    background-position: center top;
+}
+.hero-content {
+    color: #fff;
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
+    top: 50%;
+    transform: translate(0, -50%);
+}
+.hero-content h1 {
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 7vw;
+    margin-bottom: 0.25em;
+}
+.hero-content .social-link {
+    background-color: rgba(255, 255, 255, 0.8);
+    color: #557c83;
+}
+.hero-content .social-link:hover {
+    background-color: #000;
+    color: #fff;
 }
 
 /* SOCIAL STYLES */
