--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,9 @@
   {% include head.html %}
   <body>
     {% include header.html %}
-    
-    {{ content }}
-    {% include footer.html %}
+    <div class="content-container">
+      {{ content }}
+    </div>
+      {% include footer.html %}
   </body>
 </html>
