--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,15 @@ html {
   padding: 0 30px;
 }
 body {
+  display: flex;
+  flex-direction: column;
   font-family: helvetica, arial, sans;
+  min-height: 100vh;
+}
+.content-container {
+    flex: 1 1 auto;
+    padding-top: 10vh;
+    width: 100%;
 }
 h1 {
   font-size: 7vw;
@@ -18,6 +26,7 @@ a {
 }
 p {
     line-height: 1.5;
+    margin: 0.75em 0;
 }
 h2 ~ p {
   font-size: 0.8em;
@@ -194,17 +203,26 @@ h2 ~ p {
     text-align: center;
 }
 .home-callout {
+    align-items: center;
     background-color: #000;
     color: #fff;
+    display: flex;
     padding-top: 7vh 0;
 }
+.home-callout h3 {
+    color: inherit;
+    margin-top: 1em;
+}
 .callout-title {
+    flex: 1;
     font-size: 5.75vw;
     text-align: right;
     text-transform: uppercase;
 }
 .callout-copy {
+    flex: 0 0 45em;
     font-size: 0.8rem;
+    padding: 0 3vw;
 }
 
 /* BIO STYLES */
