--- a/css/main.css
+++ b/css/main.css
@@ -457,3 +457,15 @@ h2 ~ p {
     margin-top: 3em;
     padding-top: 2em;
 }
+
+/* RESPONSIVE STYLES */
+
+@media (max-width: 800px) {
+    html {
+        box-shadow: none;
+        padding: 0;
+    }
+    .post-aside {
+        display: none;
+    }
+}
