--- a/css/main.css
+++ b/css/main.css
@@ -282,7 +282,7 @@ h2 ~ p {
     text-transform: uppercase;
 }
 .callout-copy {
-    flex: 0 0 35em;
+    flex: 0 0 45em;
     font-size: 0.8rem;
     padding: 0 3vw;
 }
@@ -465,6 +465,25 @@ h2 ~ p {
         box-shadow: none;
         padding: 0;
     }
+
+    /* HEADER STYLES */
+    .header-nav {
+        padding: 2vh 1em 0 0;
+    }
+    .header-nav > li {
+        margin-left: 0.25em;
+    }
+    .header-nav > li ~ li {
+        padding-left: 0.25em;
+    }
+    .nav-links a {
+        font-size: 3.25vw;
+    }
+    .header-logo {
+        left: auto;
+    }
+
+    /* BLOG STYLES */
     .post-aside {
         display: none;
     }
